# FastAPI-Template

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/app/: deps.py.jinja  main.py.jinja  util.py.jinja
{{cookiecutter.project_name}}/app/api/models/: __init__.py.jinja  user.py.jinja
{{cookiecutter.project_name}}/app/api/repo/: email.py.jinja  redis.py.jinja  user.py.jinja
{{cookiecutter.project_name}}/app/api/routers/: auth.py.jinja  router.py.jinja
{{cookiecutter.project_name}}/app/api/schemas/: user.py.jinja
{{cookiecutter.project_name}}/app/api/services/: auth.py.jinja  user.py.jinja
{{cookiecutter.project_name}}/app/core/: config.py.jinja  exception_handlers.py.jinja  exceptions.py.jinja  security.py.jinja
{{cookiecutter.project_name}}/app/database/: session.py.jinja
{{cookiecutter.project_name}}/app/worker/: __init__.py.jinja  celery_app.py.jinja  celeryconfig.py.jinja  services.py.jinja
{{cookiecutter.project_name}}/app/worker/tasks/: base.py.jinja  email.py.jinja
{{cookiecutter.project_name}}/test/: conftest.py.jinja  test_auth.py.jinja
